# Offpunk History

## 2.9 - Unreleased
Unmerdify alpha support (by Vincent Jousse):
- Add "unmerdify" tool
- if "ftr_site_config" is set, unmerdify will be enabled in "ansicat"
- ansicat will fallback to readability if unmerdify fails
- "info" now explain how the content was cleaned
Imortant changes:
- Default image size now 100 instead of 40 (can be restored with "set images_size 40")
Features:
- new "websearch" command wich default to wiby.me
Others:
- In "lists", only consider files ending with .gmi (bug #46 by woffs)
- support for new links color in gopher (by JMCS)
- fix an off by one bug in "cp url XX" 

## 2.8 - November 13th 2025
- New option "images_size" to use with "set" (idea by aelius)
- Automatically use newly created certificates in Gemini (by JMCS)
- Fix a rare crash when listing urls in a non-existant page
- ansicat: Trying to get render preformatted text correctly in HTML
- ansicat: html <code> should be inline, not a separate block like <pre>
- ansicat: <abbr> is rendered as <code>
- fix "up" not working correctly on gopher (thanks JMCS)
- gopher: implement support for item type 7 (by JMCS)
- fix out of range index on page without links (by Alexander W. Jans)
- User-agent now includes URL to avoid blocking (suggested by cks)
- Adding gemtext rendering to message/rfc822 files 
- ansicat: support for <base> in html rendering
- gopher: consider .xml files as feeds (by JMCS)
- gopher: detect image types in gopher to open them internally (by JMCS)
- "reload" now delete cached rendering, online and offline
- ansicat: remove soft-hyphens when rendering any content

## 2.7.1 - April 9th 2025 - The "2.7 was not (completely) a joke" release
See 2.7 changelog. This was "real" release ;-)
- Reverted the tutorial back to Offpunk. The name was a joke but the rest of the release is real.
- added "application/xhtml+xml" mimetype to be rendered as html
- according to html spec, <pre> content should be parsed as HTML.

## 2.7 - April 1st 2025 - XKCDpunk release